--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-	"name": "webpack",
-	"version": "0.1.0",
+	"name": "example-app",
+	"version": "0.9.0",
 	"author": "Tobias Koppers @sokra",
 	"description": "example web app for webpack",
 	"dependencies": {
-		"webpack": "0.7.x",
-		"enhanced-require": "0.3.x",
-		"jade-loader": "0.2.x",
-		"json-loader": "0.2.x",
-		"raw-loader": "0.2.x",
-		"i18n-loader": "0.3.x"
+		"webpack": "0.9.x",
+		"webpack-dev-server": "0.9.x",
+		"jade-loader": "0.5.x",
+		"json-loader": "0.5.x",
+		"coffee-loader": "0.5.x",
+		"jshint-loader": "0.5.x",
+		"css-loader": "0.5.x",
+		"less-loader": "0.5.x",
+		"exports-loader": "0.5.x",
+		"raw-loader": "0.5.x"
 	},
 	"licenses": [
 		{
