--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
 	"description": "example web app for webpack",
 	"dependencies": {
 		"webpack": "0.9.x",
-		"webpack-dev-server": "0.9.x",
 		"jade-loader": "0.5.x",
 		"json-loader": "0.5.x",
+		"url-loader": "0.5.x",
+		"file-loader": "0.5.x",
 		"coffee-loader": "0.5.x",
 		"jshint-loader": "0.5.x",
+		"bundle-loader": "0.5.x",
+		"style-loader": "0.5.x",
 		"css-loader": "0.5.x",
 		"less-loader": "0.5.x",
 		"exports-loader": "0.5.x",
