--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
 	"author": "Tobias Koppers @sokra",
 	"description": "example web app for webpack",
 	"dependencies": {
-		"webpack": "0.11.x",
-		"webpack-dev-server": "0.11.x",
-		"jade-loader": "0.5.x",
+		"webpack": "1.2.x",
+		"webpack-dev-server": "1.3.x",
+		"bootstrap": "https://github.com/twbs/bootstrap/archive/v3.0.2.tar.gz",
+		"jade-loader": "0.6.x",
 		"json-loader": "0.5.x",
 		"url-loader": "0.5.x",
 		"file-loader": "0.5.x",
-		"coffee-loader": "0.6.x",
-		"jshint-loader": "0.5.x",
+		"coffee-loader": "0.7.x",
+		"jshint-loader": "0.6.x",
 		"bundle-loader": "0.5.x",
 		"style-loader": "0.6.x",
 		"css-loader": "0.6.x",
-		"less-loader": "0.5.x",
+		"less-loader": "0.7.x",
 		"exports-loader": "0.6.x",
 		"raw-loader": "0.5.x"
 	},
 	"jam": {
 		"dependencies": {
-			"bootstrap": "2.2.2",
 			"jquery": "1.9.1"
 		}
 	},
@@ -32,7 +32,7 @@
 		}
 	],
 	"scripts": {
-		"start": "webpack-dev-server -d --colors --content-page index.html"
+		"start": "webpack-dev-server -d --colors"
 	},
 	"engines": {
 		"node":  ">=0.1.30"
