--- a/package.json
+++ b/package.json
@@ -1,41 +1,37 @@
 {
-	"name": "example-app",
-	"version": "0.11.0",
-	"author": "Tobias Koppers @sokra",
-	"description": "example web app for webpack",
-	"dependencies": {
-		"webpack": "1.2.x",
-		"webpack-dev-server": "1.3.x",
-		"bootstrap": "https://github.com/twbs/bootstrap/archive/v3.0.2.tar.gz",
-		"jade-loader": "0.6.x",
-		"json-loader": "0.5.x",
-		"url-loader": "0.5.x",
-		"file-loader": "0.5.x",
-		"coffee-loader": "0.7.x",
-		"jshint-loader": "0.6.x",
-		"bundle-loader": "0.5.x",
-		"style-loader": "0.6.x",
-		"css-loader": "0.6.x",
-		"less-loader": "0.7.x",
-		"exports-loader": "0.6.x",
-		"raw-loader": "0.5.x"
-	},
-	"jam": {
-		"dependencies": {
-			"jquery": "1.9.1"
-		}
-	},
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "http://www.opensource.org/licenses/mit-license.php"
-		}
-	],
-	"scripts": {
-		"start": "webpack-dev-server -d --colors"
-	},
-	"engines": {
-		"node":  ">=0.1.30"
-	},
-	"homepage": "http://github.com/webpack/webpack-example"
+  "name": "example-app",
+  "version": "0.12.0",
+  "author": "Tobias Koppers @sokra",
+  "description": "example web app for webpack",
+  "dependencies": {
+    "bootstrap": "https://github.com/twbs/bootstrap/archive/v3.0.2.tar.gz",
+    "bundle-loader": "^0.5.4",
+    "coffee-loader": "^0.7.2",
+    "css-loader": "^0.26.1",
+    "exports-loader": "^0.6.3",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
+    "jquery": "^3.1.1",
+    "jshint-loader": "^0.8.3",
+    "json-loader": "^0.5.4",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "pug": "^2.0.0-beta6",
+    "pug-loader": "^2.3.0",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.0-rc.2",
+    "webpack-dev-server": "^2.2.0-rc.0"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
+    }
+  ],
+  "scripts": {
+    "start": "webpack-dev-server -d --colors"
+  },
+  "homepage": "http://github.com/webpack/webpack-example"
 }
